objects/nDESIGN__Route__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__App__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Banner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Icon_Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Order__c</fullName>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Parent_App__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Side_Bar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Side Bar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Top_Bar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Top Bar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>-D Route</label>
    <listViews>
        <fullName>nDESIGN__All</fullName>
        <columns>nDESIGN__Group__c</columns>
        <columns>NAME</columns>
        <columns>nDESIGN__App__c</columns>
        <columns>nDESIGN__Order__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>nDESIGN__Banner__c</columns>
        <columns>nDESIGN__Body__c</columns>
        <columns>nDESIGN__Icon_Class__c</columns>
        <columns>nDESIGN__Is_Hidden__c</columns>
        <columns>nDESIGN__Parent_App__c</columns>
        <columns>nDESIGN__Side_Bar__c</columns>
        <columns>nDESIGN__Top_Bar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nDESIGN__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>